--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "104corp/sms": "^1.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
@@ -61,5 +62,11 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://104corp.github.io/104-php-combuilder"
+        }
+    ]
 }
